--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://harshthadeshwar:Password@cluster0.hpoqomm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
