--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": "true",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "format": "prettier --write .",
     "test": "echo \"Error: No test specified\" && exit 1",
