--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "format": "prettier --write .",
-    "test": "echo \"Error: No test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky"
   },
   "dependencies": {
@@ -17,9 +17,12 @@
   },
   "devDependencies": {
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.5.0",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0"
   },
   "lint-staged": {
     "*.{js,md}": "prettier --write"
