--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": "true",
   "scripts": {
-    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "format": "prettier --write .",
     "test": "echo \"Error: No test specified\" && exit 1",
@@ -11,15 +10,10 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.1",
-    "nodemailer": "^6.10.0"
+    "mongoose": "^8.13.1"
   },
   "devDependencies": {
     "husky": "^9.1.7",
